# WPEPluginPower

./: .gitignore  CMakeLists.txt  Power.cpp  Power.h
PowerImplementation/Broadcom/: PowerImplementation.cpp
PowerImplementation/Stub/: PowerImplementation.cpp
cmake/: FindBcmNxServer.cmake  FindBcmPowerManager.cmake  FindWPEFramework.cmake
